--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section-portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
