--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
-          <svg class="icon-close" width="8" height="8">
+          <svg class="modal-close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -705,7 +705,7 @@
           <div class="modal-input-comment">
             <label for="user-comment" class="lable-form">Comment</label>
             <textarea
-              class="input-form comment"
+              class="input-form-comment"
               name="user-comment"
               rows="5"
               placeholder="Text input"
