--- a/index.html
+++ b/index.html
@@ -380,13 +380,7 @@
             <li class="portfolio-list-item">
               <div class="overlay-box">
                 <picture>
-                  <source
-                    media="(min-width:1158px)"
-                    srcset="
-                      ./images/portfolio/desktop/project-card-2@1x.jpg 1x,
-                      ./images/portfolio/desktop/project-card-2@2x.jpg 2x
-                    "
-                  />
+                  
                   <source
                     media="(min-width:768px)"
                     srcset="
@@ -522,7 +516,7 @@
                     "
                   />
                   <img
-                    src="./images/portfolio/mobile/project-card-5@1x.jpg"
+                    src="./images/portfolio/desktop/project-card-5@1x.jpg 1x"
                     alt="illustrations"
                   />
                 </picture>
